# gfx-vulkan-engine

./: .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: config.c.B619350876566C95.idx  config.h.E47BFA677A29D6B2.idx  main.c.356027BD26219F3C.idx  structure.c.DA248F7F5A765AB0.idx  structure.h.186FB5D69B24AAB4.idx
include/: error.h
include/backend/: gpu.h  pipeline.h  util.h  window.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/core/: arrays.h  bitwise.h  defines.h  handle.h
lib/core/src/: arrays.c  bitwise.c  handle.c
lib/engine/: CMakeLists.txt
lib/engine/include/: error.h
lib/engine/include/backend/: pipeline.h
lib/engine/include/engine/backend/: util.h
lib/engine/src/: main.c
lib/engine/src/backend/: gpu.c  pipeline.c  util.c  window.c
lib/engine/src/core/: error.c
samples/: config.env
samples/triangle/: CMakeLists.txt
samples/triangle/src/: main.c
script/: build.ps1
shaders/: compile.bat  shader.vert
src/: main.c
src/backend/: gpu.c  pipeline.c  window.c
src/engine/: config.c  config.h  structure.c  structure.h
tools/: CMakeLists.txt
tools/asset-compiler/: CMakeLists.txt
tools/asset-compiler/include/assets/: mesh.h
tools/asset-compiler/include/core/: handle.h
tools/asset-compiler/src/: main.c
tools/asset-compiler/src/assets/: mesh.c
tools/asset-compiler/src/core/: handle.c
